--- a/app/views/hub/redirect-to-idp.html
+++ b/app/views/hub/redirect-to-idp.html
@@ -12,14 +12,20 @@
     <div class="column-two-thirds">
       <h1 class="heading-large">
         <span class="heading-secondary">2. Confirming your details to verify your identity</span>
-        Create your {{idpName}} identity account
+        Set up your digital identity with {{idpAccountName}}
       </h1>
 
-        <p>You'll now verify your identity on the {{idpName}} website.</p>
+        <p>We'll now send you to {{idpName}}’s website.</p>
 
-        <p>They'll give you an identity account you can use wherever you see the GOV.UK Verify logo.</p>
+        <p>You’ll need your:</p>
+        <ul class="list list-bullet">
+          <li>identity documents</li>
+          <li>mobile phone</li>
+        </ul>
 
-        <p>You'll then be able to {{serviceNameLower}}.</p>
+        <p>When you’ve set up your digital identity, {{idpAccountName}} will send you back to GOV.UK so you can do step 3, access {{serviceNameLower}}.</p>
+
+        <p>In the future you can use your digital identity wherever you see the GOV.UK Verify logo.</p>
 
         <form action="{{idpRoot}}sign-up{{formQuery}}">
 
