--- a/app/views/hub/sm-signin-2col.html
+++ b/app/views/hub/sm-signin-2col.html
@@ -48,7 +48,7 @@
                       <img src="/public/images/idp-icons/{{idp.slug}}.png" class="idp-icon">
                     </div>
 
-                    <button class="button-link" >{{ idp.name }}</button>
+                    <button class="button-link" >{{ idp.accountName }}</button>
                   </form>
                 </div>
               </li>    
