--- a/app/views/hub/slide-all.html
+++ b/app/views/hub/slide-all.html
@@ -17,9 +17,9 @@
 	<ul class="list list-number">
 		<li class=''>Select the identity provider you want use.</li>
 		<li class=''>Confirm your details so the provider can verify your identity.</li>
-		<li class=''>Return to GOV.UK to access {{serviceNameLower}}.</li>
+		<li class=''>Continue to GOV.UK to access {{serviceNameLower}}.</li>
 	</ul>
-	<p>It takes about 15 minutes to get set up.</p>
+	<p>It’s free, and takes about 15 minutes to get set up.</p>
 <form id="start-page-form" class="js-validate" novalidate="novalidate" action="/hub/select-documents" accept-charset="UTF-8" method="get">
 
   <div class="form-group">
