--- a/app/views/hub/select-other-documents.html
+++ b/app/views/hub/select-other-documents.html
@@ -11,15 +11,12 @@
   <div class="grid-row">
     {% include "includes/verify-logo.html" %}
     <div class="column-two-thirds">
-  		<h1 class="heading-large">Other identity documents</h1>
+  		<h1 class="heading-large">
+        <span class="heading-secondary">1. Select the identity provider you want use</span>
+        Other identity documents
+      </h1>
 
-      <p>Some certified companies can use identity documents from other countries to verify you.</p>
-
-      <div class="panel panel-border-wide">
-        <p>
-          The more identity documents you can provide now, the more likely it is that the company can verify you successfully.
-        </p>
-      </div>
+      <p>Some identity providers can use identity documents from other countries.</p>
 
       <form action="/hub/select-phone{{formQuery}}">
         {{formData | safe}}
