Updated logo to become certified badge

--- a/app/views/hub/redirect-to-idp.html
+++ b/app/views/hub/redirect-to-idp.html
@@ -9,6 +9,8 @@
 <main id="content" role="main">
   {% include "includes/available-languages.html" %}
   <div class="grid-row">
+    {% include "includes/verify-logo.html" %}
+
     <div class="column-two-thirds">
       <h1 class="heading-large">
         <span class="heading-secondary">2. Confirming your details to verify your identity</span>
