--- a/app/views/includes/verify-logo.html
+++ b/app/views/includes/verify-logo.html
@@ -1,4 +1,3 @@
-<div class="verify-logo">
-  <img class="verify-hub-logo" src="/public/images/govuk-verify-small-black-text.png" alt="">
+<div class="verify-logo" width="300px">
+  <img class="verify-hub-logo" src="/public/images/verify-certified-badge.svg" alt="">
 </div>
-
