--- a/app/views/includes/verify-logo.html
+++ b/app/views/includes/verify-logo.html
@@ -1,3 +1,3 @@
-<div class="verify-logo" width="300px">
+<div class="verify-logo">
   <img class="verify-hub-logo" src="/public/images/verify-certified-badge.svg" alt="">
 </div>
