--- a/app/views/hub/slide-all.html
+++ b/app/views/hub/slide-all.html
@@ -20,12 +20,14 @@
 		<li class=''>Continue to GOV.UK to access {{serviceNameLower}}.</li>
 	</ul>
 	<p>It’s free, and takes about 15 minutes to get set up.</p>
-<form id="start-page-form" class="js-validate" novalidate="novalidate" action="/hub/select-documents" accept-charset="UTF-8" method="get">
+	
+	<p><a href="/hub/slide-pick-idp">Find out more about setting up your digital identity</a> or</p>
+
+	<form id="start-page-form" class="js-validate" novalidate="novalidate" action="/hub/select-documents" accept-charset="UTF-8" method="get">
 
   <div class="form-group">
     <div class="actions">
       <input class="button" id="next-button" type="submit" value="Pick a digital identity provider">
-      <span style="display:inline-block; margin-top: 10px; padding-left: 5px; font-size: 19px"> or <a href="/hub/slide-pick-idp">find out more</a></span>
     </div>
   </div>
 </form>
