Update select documents

--- a/app/views/hub/select-documents.html
+++ b/app/views/hub/select-documents.html
@@ -16,7 +16,7 @@
       </h1>
 
       {{data['non-uk-group']}}
-      <p>You don’t have to be an existing customer as they’ve all built new, secure systems in order to verify identities. The provider you choose asks you for some personal details and checks them against records held by mobile phone providers, credit agencies, HM Passport Office or DVLA.</p>
+      <p>Identity providers need proof of who you are. You’ll be asked to provide the details from the identity documents you have so they can double check them with DVLA, DVA and HM Passport Office.</p>
 
       <form action="/hub/select-other-documents{{formQuery}}">
         {{formData | safe}}
