Various fixes to IDP journey

--- a/app/views/idp/driving-licence.html
+++ b/app/views/idp/driving-licence.html
@@ -31,11 +31,11 @@
 							<input class="form-control form-control-xsmall" type="text" maxlength="2">
 						</div>
 						<div class="form-group" data-required="Please enter your passport number">
-							<label class="form-label-bold " for="drivingLicenceFirstName">First name(s) including middle name(s) <span class="subtext">(item 1 on your licence)</span></label>
+							<label class="form-label-bold " for="drivingLicenceFirstName">Last name <span class="subtext">(item 1 on your licence)</span></label>
 							<input class="form-control" id="drivingLicenceFirstName" type="text">
 						</div>
 						<div class="form-group" data-required="Please enter your passport number">
-							<label class="form-label-bold " for="drivingLicenceLastName">Last name <span class="subtext">(item 2 on your licence)</span></label>
+							<label class="form-label-bold " for="drivingLicenceLastName">First name(s) including middle name(s)<span class="subtext">(item 2 on your licence)</span></label>
 							<input class="form-control" id="drivingLicenceLastName" type="text">
 						</div>
 						<div class="form-group">
