--- a/app/views/idp/sign-in.html
+++ b/app/views/idp/sign-in.html
@@ -23,13 +23,13 @@
 					{{ formData|safe }}
 
 					<div class="form-group">
-						<label class="form-label" for="username">Email address</label>
-					<input class="form-control" id="username" name="username" type="text" placeholder="Enter your email address" style="width:460px;" >
+						<label class="form-label">Email address</label>
+					<input class="form-control" type="text" placeholder="Enter your email address" style="width:460px;" >
 					</div>
 			
 					<div class="form-group">
-						<label class="form-label" for="password">Password</label>
-						<input class="form-control" id="password" type="password" placeholder="Enter your password" autocomplete='off'  style="width:460px;">
+						<label class="form-label" >Password</label>
+						<input class="form-control" type="password" placeholder="Enter your password" autocomplete='off'  style="width:460px;">
 					</div>
 					
 					
