--- a/app/views/idp/sign-up.html
+++ b/app/views/idp/sign-up.html
@@ -25,18 +25,18 @@
 					{{ formData|safe }}
 
 					<div class="form-group" data-required="Please enter your email address">
-						<label class="form-label" for="username">Email address</label>
-					<input class="form-control" id="username" name="username" type="text" placeholder="Enter your email address" style="width:460px;" >
+						<label class="form-label" >Email address</label>
+					<input class="form-control" type="text" placeholder="Enter your email address" style="width:460px;">
 					</div>
 			
 					<div class="form-group" data-required="Please enter your password">
-						<label class="form-label" for="password">Password</label>
-						<input class="form-control" id="password" type="password" placeholder="Enter your password" autocomplete='off'  style="width:460px;" name="_secret">
+						<label class="form-label">Password</label>
+						<input class="form-control" type="password" placeholder="Enter your password" autocomplete='off'  style="width:460px;">
 					</div>
 			
 					<div class="form-group" data-required="Please confirm your password">
-						<label class="form-label" for="password">Confirm password</label>
-						<input class="form-control" id="password" type="password" placeholder="Confirm your password" autocomplete='off'  style="width:460px;" name="_secret">
+						<label class="form-label" >Confirm password</label>
+						<input class="form-control" type="password" placeholder="Confirm your password" autocomplete='off'  style="width:460px;">
 					</div>
 
 					<p>
