Fixing routing having renamed pages

--- a/app/views/hub/service-signin.html
+++ b/app/views/hub/service-signin.html
@@ -14,7 +14,7 @@
 
       {{formData | safe}}
 
-      <form action='/hub/sm-signin{{formQuery}}'>
+      <form action='/hub/signin-method{{formQuery}}'>
         
         <div class="form-group">
           <fieldset class="block">
