Updating all content to 'identity account'

--- a/app/views/hub/choose-a-company.html
+++ b/app/views/hub/choose-a-company.html
@@ -12,10 +12,10 @@
     {% include "includes/verify-logo.html" %}
     <div class="column-two-thirds">
   		<h1 class="heading-large">
-        <span class="heading-secondary">1. Select the identity provider you want use</span>
-        Identity providers </h1>
+        <span class="heading-secondary">Select the identity account you want use</span>
+        Identity accounts </h1>
 
-        <p>You don’t have to be an existing customer as they’ve all built new, secure systems in order to verify identities. The provider you choose asks you for some personal details and checks them against records held by mobile phone providers, credit agencies, HM Passport Office or DVLA.</p>
+        <p>You don’t have to be an existing customer as they’ve all built new, secure systems in order to verify identities. The account you choose asks you for some personal details and checks them against records held by mobile phone providers, credit agencies, HM Passport Office or DVLA.</p>
 
         {{ formData | safe }}
 
