--- a/app/views/hub/create-account.html
+++ b/app/views/hub/create-account.html
@@ -27,7 +27,7 @@
         <table>
         <tr>
           <td class="heading-medium table-body">Government Gateway</td>
-          <td class="heading-medium table-body">GOV.UK Verify</td>
+          <td class="heading-medium table-body">GOV.UK Verify identity accounts</td>
         </tr>
         <tr>
           <td>
@@ -46,7 +46,7 @@
           </td>
           <td>
             <div class="heading-small">What you need</div>
-            <p>GOV.UK Verify requires you to:</p>
+            <p>a GOV.UK Verify identity account requires you to:</p>
             <ul class="list list-bullet">
               <li>have a UK address</li>
               <li>be over 18 years old</li>
@@ -56,7 +56,7 @@
               <li>a valid passport</li>
               <li>a driving licence</li>
             </ul>
-            <a href="/about{{formQuery}}" class="button">Create an account with GOV.UK Verify</a>
+            <a href="/hub/sm-signin{{formQuery}}" class="button">Create a GOV.UK Verify identity account</a>
             <br>
             <br>
           </td>
@@ -79,7 +79,7 @@
           </td>
           <td>
             <div class="heading-small">How it works</div>
-            A certified company will double check your identity. All the companies involved have met security standards set by government.
+            You'll create an identity account certified by GOV.UK Verify to securely access {{serviceNameLower}}
           </td>
         </tr>
       </table>
