--- a/app/views/hub/redirect-to-idp.html
+++ b/app/views/hub/redirect-to-idp.html
@@ -13,8 +13,8 @@
 
     <div class="column-two-thirds">
       <h1 class="heading-large">
-        <span class="heading-secondary">2. Confirming your details to verify your identity</span>
-        Set up your digital identity with {{idpAccountName}}
+        <span class="heading-secondary">Confirming your details to verify your identity</span>
+        Set up your {{idpAccountName}} identity account
       </h1>
 
         <p>We'll now send you to {{idpName}}’s website.</p>
@@ -25,9 +25,9 @@
           <li>mobile phone</li>
         </ul>
 
-        <p>When you’ve set up your digital identity, {{idpAccountName}} will send you back to GOV.UK so you can do step 3, access {{serviceNameLower}}.</p>
+        <p>When you’ve set up your identity account, {{idpAccountName}} will send you back to GOV.UK so you can do step 3, access {{serviceNameLower}}.</p>
 
-        <p>In the future you can use your digital identity wherever you see the GOV.UK Verify logo.</p>
+        <p>In the future you can use your identity account wherever you see the GOV.UK Verify logo.</p>
 
         <form action="{{idpRoot}}sign-up{{formQuery}}">
 
