--- a/app/views/hub/sm-signin.html
+++ b/app/views/hub/sm-signin.html
@@ -12,17 +12,17 @@
     <div class="grid-row">      
         <div class="column-two-thirds" style="">
               
-          <h1 class="heading-large">Set up or sign in with a digital identity</h1>
+          <h1 class="heading-large">Set up or sign in with an<br> identity account</h1>
         </div>
     </div>
     <div class="grid-row">
       <div class="column-half">
-        <h2 class="heading-medium">Set up a digital identity</h2>
-        <p>Set up a digital identity with an identity provider so you can securely sign in to {{serviceNameLower}}.</p>
+        <h2 class="heading-medium">Set up an identity account</h2>
+        <p>Set up an identity account so you can securely sign in to {{serviceNameLower}}.</p>
 
         <form id="" class="js-validate" novalidate="novalidate" action="/hub/setting-up-verify{{formQuery}}" accept-charset="UTF-8" method="get">
           {{formData | safe}}
-          <input class="button" id="next-button" type="submit" value="Set up a digital identity">
+          <input class="button" id="next-button" type="submit" value="Set up an identity account">
           <input type="hidden" name="registration" value="true">
         </form>
         <br>
@@ -31,7 +31,7 @@
       </div>
       <div class="column-half">
           <h2 class="heading-medium">Sign in with your digital identity</h2>
-          <p>Sign in with a digital identity that you set up with an identity provider in the past.</p>
+          <p>Sign in with an identity account that you set up in the past.</p>
 
           {{formData | safe}}
           
@@ -55,7 +55,7 @@
             {% endfor %}
             </ul>
           </div>
-           <p style="text-align: left;">UK government trusts these identity providers as they’re part of GOV.UK Verify.</p>
+           <p style="text-align: left;">UK government trusts these identity account as they’re approved by GOV.UK Verify.</p>
           <img src="/public/images/verify-certified-badge.svg" width="75%" class="">
           <br>
           <br>
@@ -64,7 +64,7 @@
             <div class="" style="text-align: left;">
               <p>GOV.UK Verify is designed by the UK government to fight the growing problem of identity theft.</p>
 
-              <p>Identity providers apply to be part of GOV.UK Verify. They are certified when they meet security and privacy standards set by government so you can trust them with your personal information.</p>
+              <p>identity account apply to be part of GOV.UK Verify. They are certified when they meet security and privacy standards set by government so you can trust them with your personal information.</p>
 
               <p>When a government service uses GOV.UK Verify, you can access the service with the digital identity you set up with the identity provider.</p>
             </div>
