Updating steps page

--- a/app/views/hub/setting-up-verify.html
+++ b/app/views/hub/setting-up-verify.html
@@ -14,11 +14,23 @@
 			<h1 class="heading-large">Setting up your identity account</h1>
 
 	<p>The 3 steps to setting up your identity account:</p>
-	<ul class="list list-number">
-		<li class=''>Select the identity account you want use.</li>
-		<li class=''>Confirm your details so we can verify your identity.</li>
-		<li class=''>Continue to GOV.UK to access {{serviceNameLower}}.</li>
-	</ul>
+	<dl class="steps-list">
+		<dt>1.</dt>
+		<dd>Select the identity account you want use.</dd>
+		<br>
+		<dt>2.</dt>
+		<dd>Confirm your details so we can verify your identity.</dd>
+		<br>
+		<dt>3.</dt>
+		<dd>Continue to GOV.UK to access {{serviceNameLower}}.</dd>
+	</dl>
+
+		
+
+		
+
+		
+
 	<p>It’s free, and takes about 15 minutes to get set up.</p>
 	
 	<p><a href="/hub/setting-up-more-info">Find out more about setting up your identity account</a> or</p>
@@ -37,6 +49,11 @@
   </div>
 </main>
 
+<style>
+
+
+
+</style>
 
 
 {% endblock %}
