--- a/app/views/hub/hub-sign-in.html
+++ b/app/views/hub/hub-sign-in.html
@@ -13,7 +13,7 @@
   {% include "includes/verify-logo.html" %}
     <div class="column-two-thirds">
       <h2 class="heading-large">Who do you have an identity account with?</h2>
-      <p>If you don’t have an identity account, you can <a href="/hub/slide-all-long{{ formQuery | safe }}&registration=true">create a new one</a>.</p> 
+      <p class="lede" >If you don’t have an identity account, you can <a href="/hub/slide-all-long{{ formQuery | safe }}&registration=true">set one up now</a>.</p> 
     </div>
   </div>
 
@@ -22,7 +22,7 @@
   {% if data['idpChoice'] != undefined %}
     <div class="grid-row">
       <div class="column-two-thirds">
-        <p>The last person using this device signed in with {{idpName}}.</p>
+        <p>The last certified company used on this device was {{idpName}}.</p>
       </div>
     </div>
     <div class="grid-row">
@@ -50,7 +50,7 @@
     </div>
     <div class="grid-row">
       <div class="column-two-thirds">
-        <p>You can also sign in with any of these companys if you’ve previously set up an identity account with them.</p>
+        <p>You can use an identity account you set up with any certified company in the past: </p>
       </div>
     </div>
   {% endif %}
