--- a/app/views/hub/select-documents.html
+++ b/app/views/hub/select-documents.html
@@ -11,12 +11,12 @@
   <div class="grid-row">
     <div class="column-two-thirds">
   		<h1 class="heading-large">
-        <span class="heading-secondary">Select the identity account you want use</span>
+        <span class="heading-secondary">Step 1. Choose the digital identity you want to set ups</span>
         Your photo identity documents
       </h1>
 
       {{data['non-uk-group']}}
-      <p>Identity accounts need proof of who you are. You’ll be asked to provide the details from the identity documents you have so they can double check them with DVLA, DVA and HM Passport Office.</p>
+      <p>You need proof of who you are. You’ll be asked to provide the details from the identity documents you have so they can be double checked with DVLA, DVA and HM Passport Office.</p>
 
       <form action="/hub/select-other-documents{{formQuery}}">
         {{formData | safe}}
