--- a/app/views/hub/select-other-documents.html
+++ b/app/views/hub/select-other-documents.html
@@ -11,7 +11,7 @@
   <div class="grid-row">
     <div class="column-two-thirds">
   		<h1 class="heading-large">
-        <span class="heading-secondary">1. Select the identity provider you want use</span>
+        <span class="heading-secondary">Step 1. Choose the digital identity you want to set up</span>
         Other identity documents
       </h1>
 
