--- a/app/views/hub/service-signin.html
+++ b/app/views/hub/service-signin.html
@@ -29,8 +29,8 @@
             <div class="multiple-choice">
               <input id="radio-inline-2" type="radio" name="sign_in" value="verify">
               <label for="radio-inline-2">
-                <span class='label-header'>Sign in with a GOV.UK Verify identity account</span><br>
-                <span class="label-subhead">You’ll have an account if you’ve already created an identity account with either Barclays, CitizenSafe, Digidentity, Experian, Post Office, Royal Mail or SecureIdentity. </span>
+                <span class='label-header'>Sign in with a GOV.UK Verify digital identity</span><br>
+                <span class="label-subhead">You’ll have an account if you’ve already created a digital identity with either Barclays, CitizenSafe, Digidentity, Experian, Post Office, Royal Mail or SecureIdentity. </span>
               </label>
             </div>
             <div class="form-block">or</div>
