--- a/app/views/hub/setting-up-verify.html
+++ b/app/views/hub/setting-up-verify.html
@@ -11,15 +11,15 @@
 
   <div class="grid-row">
     <div class="column-two-thirds">
-			<h1 class="heading-large">Setting up your identity account</h1>
+			<h1 class="heading-large">Setting up your digital identity</h1>
 
-	<p>The 3 steps to setting up your identity account:</p>
+	<p>3 steps to set up your digital identity:</p>
 	<dl class="steps-list">
 		<dt>1.</dt>
-		<dd>Select the identity account you want use.</dd>
+		<dd>Choose the digital identity you want to set up.</dd>
 		<br>
 		<dt>2.</dt>
-		<dd>Confirm your details so we can verify your identity.</dd>
+		<dd>Confirm your details to set up your digital identity.</dd>
 		<br>
 		<dt>3.</dt>
 		<dd>Continue to GOV.UK to access {{serviceNameLower}}.</dd>
@@ -31,15 +31,15 @@
 
 		
 
-	<p>It’s free, and takes about 15 minutes to get set up.</p>
+	<p>It’s free and takes about 15 minutes to set up.</p>
 	
-	<p><a href="/hub/setting-up-more-info">Find out more about setting up your identity account</a> or</p>
+	<p><a href="/hub/setting-up-more-info">Find out more</a> or</p>
 
 	<form id="start-page-form" class="js-validate" novalidate="novalidate" action="/hub/select-documents" accept-charset="UTF-8" method="get">
 
   <div class="form-group">
     <div class="actions">
-      <input class="button" id="next-button" type="submit" value="Select your identity account">
+      <input class="button" id="next-button" type="submit" value="Choose a digital identity">
     </div>
   </div>
 </form>
