--- a/app/views/hub/verify-failed.html
+++ b/app/views/hub/verify-failed.html
@@ -52,7 +52,7 @@
         </details>
       </p>
       {% if userLOA == '1' %}
-      <h2 class="heading-medium">You can still access these government services with your {{idpName}} identity account</h2>
+      <h2 class="heading-medium">You can still access these government services with your {{idpName}} digital identity</h2>
 
       <ul class="list list-bullet">
         <li>complete your claim or access your Universal Credit account</li>
