--- a/app/views/hub/verify-success.html
+++ b/app/views/hub/verify-success.html
@@ -13,7 +13,7 @@
   		
 
 	<h1 class="heading-large">
-	  <span class="heading-secondary">3. Continue to {{serviceNameLower}}</span>
+	  <span class="heading-secondary">Step 3. Continue to {{serviceNameLower}}</span>
 		Your digital identity
 	</h1>
 
