--- a/app/views/idp/save-and-return-warning.html
+++ b/app/views/idp/save-and-return-warning.html
@@ -14,7 +14,7 @@
 	<div class="grid-row">
 		{% include "includes/idp-sidebar.html" %}
 		<div class="column-two-thirds">
-			<h1 class="heading-large ">Are you sure you want to sign out of your {{idpName}} identity account?</h1>
+			<h1 class="heading-large ">Are you sure you want to sign out of your {{idpName}} digital identity?</h1>
 
 				{{ formData|safe }}
 
