--- a/app/views/idp/sign-in.html
+++ b/app/views/idp/sign-in.html
@@ -14,7 +14,7 @@
 	<div class="grid-row">
 		{% include "includes/idp-sidebar.html" %}
 		<div class="column-half">
-			<h1 class="heading-large ">Sign in to your GOV.UK identity account</h1>
+			<h1 class="heading-large ">Sign in to your GOV.UK digital identity</h1>
 			<div class="form-group">
 				
 
@@ -43,7 +43,7 @@
 						<a href="javascript:history.back()">Back</a>
 					</div>
 			
-					<p>If you don't already have a {{idpName}} identity account you can <a href="{{baseURL}}/input-email{{formQuery}}">create an account</a>.</p>
+					<p>If you don't already have a {{idpName}} digital identity you can <a href="{{baseURL}}/input-email{{formQuery}}">create an account</a>.</p>
 				</form>
 				
 			</div>
