--- a/app/views/idp/uplift-warning.html
+++ b/app/views/idp/uplift-warning.html
@@ -26,7 +26,7 @@
 				<p>You won’t need to do this every time you access a government service.</p>
 			</div>
 
-			<p>Once we've checked the evidence and we know that it's you, you can access all government services using your {{idpName}} identity account.</p>
+			<p>Once we've checked the evidence and we know that it's you, you can access all government services using your {{idpName}} digital identity.</p>
 
 			<p><img class="sign-in-logo" src="/public/images/govuk-verify-small-black-text.png" style="max-height:50px;" alt=""></p>
 
