--- a/app/views/idp/verify-success.html
+++ b/app/views/idp/verify-success.html
@@ -29,10 +29,10 @@
       
 			{% if data['registration'] != 'true' %}
       	<!-- Only renders if the user is doing an uplift journey -->
-        <p>We've updated your {{idp}} identity account so you will not be asked for more evidence again when you need to access another government service.</p>
+        <p>We've updated your {{idp}} digital identity so you will not be asked for more evidence again when you need to access another government service.</p>
       {% endif %}
 
-      <p>You can now sign in with your {{idp}} identity account whenever you see the GOV.UK Verify logo.</p>
+      <p>You can now sign in with your {{idp}} digital identity whenever you see the GOV.UK Verify logo.</p>
         
       <p><img class="sign-in-logo" src="/public/images/govuk-verify-small-black-text.png" style="max-height:50px;" alt=""></p>
 
