--- a/app/views/hub/hub-sign-in.html
+++ b/app/views/hub/hub-sign-in.html
@@ -12,8 +12,8 @@
   <div class="grid-row">
   {% include "includes/verify-logo.html" %}
     <div class="column-two-thirds">
-      <h2 class="heading-large">Who do you have an identity account with?</h2>
-      <p class="lede" >If you don’t have an identity account, you can <a href="/hub/slide-all-long{{ formQuery | safe }}&registration=true">set one up now</a>.</p> 
+      <h2 class="heading-large">Who do you have a digital identity with?</h2>
+      <p class="lede" >If you don’t have a digital identity, you can <a href="/hub/slide-all-long{{ formQuery | safe }}&registration=true">set one up now</a>.</p> 
     </div>
   </div>
 
@@ -50,7 +50,7 @@
     </div>
     <div class="grid-row">
       <div class="column-two-thirds">
-        <p>You can use an identity account you set up with any certified company in the past: </p>
+        <p>You can use a digital identity you set up with any certified company in the past: </p>
       </div>
     </div>
   {% endif %}
